<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashBoardFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardElevation="20dp"
        app:cardCornerRadius="20dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent" >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/person_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="25dp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_sharp_person_24"
                android:layout_marginTop="10dp"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp"
                app:layout_constraintEnd_toEndOf="parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5000 som"
                        android:textAllCaps="false"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameO"
                android:textAllCaps="false"
                android:layout_marginStart="30dp"
                app:layout_constraintTop_toBottomOf="@id/person_icon"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nurumbet Saryev"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/name"
                app:layout_constraintBottom_toTopOf="@id/v1"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                />

            <View
                android:id="@+id/v1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="30dp"
                android:background="@android:color/darker_gray"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usernameO"
                android:textAllCaps="false"
                android:layout_marginStart="30dp"
                app:layout_constraintTop_toBottomOf="@id/v1"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/username_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="atonin"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/username"
                app:layout_constraintBottom_toTopOf="@id/v2"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                />

            <View
                android:id="@+id/v2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:layout_constraintTop_toBottomOf="@id/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="30dp"
                android:background="@android:color/darker_gray"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="Categories:"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/container"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/container_uigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categories"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="Family:"
                android:textStyle="italic"
                android:layout_marginStart="4dp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fam_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginEnd="3dp"
                android:text="-400"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="4dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/container_ozumo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_uigo"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_weight="5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="Self Interest:"
                android:textStyle="italic"
                android:layout_marginStart="4dp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/self_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="-100 som"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_weight="1"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="4dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/container_edu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_ozumo"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="italic"
                android:layout_weight="5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="Education:"
                android:layout_marginStart="4dp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/edu_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginEnd="3dp"
                android:text="+40 som"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/container_hobby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_edu"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_weight="5"
                android:text="Hobby:"
                android:textStyle="italic"
                android:layout_marginStart="4dp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hoo_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="-56 som"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_weight="1"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="4dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="Expense:"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/container_hobby"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/expense_som"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="-556 som"
        app:layout_constraintStart_toEndOf="@id/expense"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/container_hobby"
        />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/Profit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="Profit:"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/expense"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/profit_som"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="+40 som"
        app:layout_constraintStart_toEndOf="@id/Profit"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/expense_som"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Profit"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/rounded_corner"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/rounded_corner"
        />
</androidx.constraintlayout.widget.ConstraintLayout>